# CineMol

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  Build.fs  Build.fsproj  CITATION.cff  LICENSE  MANIFEST.in  README.md  build.py  cinemol.fsx  cinemol.sln  cinemol_py.sh  cinemole.sln  color_substructure.py  compile_fsharp_to_python.sh  create_svgs.sh  daptomycin.sdf  environment.yml  npatlas.sdf  package-lock.json  package.json  paket.dependencies  pyproject.toml  requirements.txt  sdf2svg.py  setup.cfg  setup.py  smiles2svg.py  test.sh  tox.ini  webpack.config.js
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: tests.yml
app/: .gitignore  Build.fs  README.md  app.sln  package-lock.json  package.json  webpack.config.js
app/public/: index.html  manifest.json
app/src/: index.css  index.js
app/src/Client/: App.fs  Client.fsproj  Index.fs  index.html  style.scss
app/src/components/: Header.js  Sidebar.js  Toast.js  WorkSpace.js
cinemol-py/: drawing.py  helpers.py  parsing.py  svg.py
cinemol_py/: drawing.py  encoding.py  geometry.py  helpers.py  parsing.py  styles.py  svg.py  types.py
cinemol_py/fable_modules/: .gitignore  project_cracked.json
cinemol_py/fable_modules/fable_library/: array.py  choice.py  fsharp_collections.py  fsharp_core.py  global_.py  list.py  map.py  mutable_map.py  mutable_set.py  native.py  range.py  seq.py  seq2.py  set.py  system_collections_generic.py  system_text.py  timer.py
cinemol_py/fable_modules/fable_library/fable_modules/: project_cracked.json
cinnamol/: __init__.py  config.py  drawer.py  logger.py  performance.py
cinnamol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
create_figures/: visual_summary_performance.py
data/: enterobactin.sdf  gephyronic_acid.sdf  penicillin_G.sdf
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
docs/source/cinemol/: api.rst  fitting.rst  geometry.rst  index.rst  model.rst  parsers.rst  style.rst  svg.rst
examples/: draw_all_depictions_for_molecule.py  draw_protein_with_ligands.py  draw_substructure_highlights.py  draw_superimposed_conformers.py  draw_visual_explanation_algorithm.py
examples/create_figures/: measure_performance.py  visual_explanation_algorithm.py  visual_summary_performance.py
examples/data/: README.md  performance_on_platinum_dataset.tsv
figures/: algorithm_explanation.py  create_conformers.py  figure2.py  figure3a.py  figure3b.py  figure3c.py  visual_summary_performance.py
playground/: clipping.py
scripts/: draw_all_depictions.py  draw_conformer.py  draw_cylinder.py  draw_explanation_algorithm.py  draw_molecule.fsx  draw_molecule.py  draw_protein.py  draw_protein_with_ligand.py  figure1.py  figure2.py  figure3a.py  figure3b.py  program.py  svg3d.py  test.py
src/: main.py
src/CineMol/: CineMol.Drawing.fs  CineMol.Encoding.fs  CineMol.Helpers.fs  CineMol.Parsing.fs  CineMol.Projection.fs  CineMol.Style.fs  CineMol.Types.fs  CineMol.Version.fs  CineMol.fsproj  Clipping.fs  Drawing.fs  Encoding.fs  Geometry.fs  Helpers.fs  Projection.fs  Style.fs  Types.fs
src/Client/: Client.fsproj  Index.fs  Sidebar.fs  index.html  paket.references  style.css  style.scss
src/Client/CineMol/: CineMol.fsproj  Drawing.fs  Encoder.fs  Encoding.fs  ErrorHandling.fs  Geometry.fs  Helpers.fs  Parsing.fs  Render.fs  Styles.fs  Svg.fs  Types.fs
src/Client/Cinemole/: Drawing.fs  Encoder.fs  ErrorHandling.fs  Geometry.fs  Helpers.fs  Parsing.fs  Render.fs  Svg.fs  Types.fs
src/Client/Widgets/: General.fs  Settings.fs
src/Server/: Server.fs  Server.fsproj
src/Server/Cinemol/: Drawing.fs  ErrorHandling.fs  Geometry.fs  Helpers.fs  Parsing.fs  Svg.fs  Types.fs
src/Server/Cinemole/: Cinemole.fsproj  Drawing.fs  ErrorHandling.fs  Geometry.fs  Helpers.fs  Parsing.fs  Svg.fs  Types.fs
src/Shared/: Shared.fs
src/Test/: SomeLib.fs  Test.fsproj
src/_CineMol/: CineMol.Style.fs
src/cinemol/: __init__.py  __main__.py  api.py  chemistry.py  cli.py  convex_hull.py  fitting.py  geometry.py  model.py  parsers.py  shapes.py  style.py  svg.py  version.py
src/cinemol_py/: api.py  cine_mol_drawing.py  cine_mol_encoding.py  cine_mol_helpers.py  cine_mol_parsing.py  cine_mol_style.py  cine_mol_types.py  cine_mol_version.py
src/cinemol_py/fable_modules/: project_cracked.json
src/cinemol_py/fable_modules/fable_library/: array_.py  choice.py  fsharp_collections.py  fsharp_core.py  global_.py  list.py  map.py  mutable_map.py  mutable_set.py  native.py  range.py  seq.py  seq2.py  set.py  system_collections_generic.py  system_text.py  timer.py
src/cinemol_py/fable_modules/fable_python/cognite-sdk/: cognite_sdk.py
src/cinemol_py/fable_modules/fable_python/flask/: flask.py
src/cinemol_py/fable_modules/fable_python/jupyter/: ipy_widgets.py  ipython.py
src/cinemol_py/fable_modules/fable_python/stdlib/: builtins_.py  sys_.py
src/cinemol_py/fable_modules/fable_python/stdlib/asyncio/: events.py  futures.py  tasks.py
src/cinemol_rdkit/: depiction.py  draw_molecule.py
src/cinemolpy/: draw.py
src/cli/: main.py
test/: test_error_handling.py
tests/: __init__.py  test_api.py  test_cli.py  test_fitting.py  test_geometry.py  test_model.py  test_parsers.py  test_parsing.py  test_style.py  test_svg.py  test_version.py
tests/CineMol.Tests/: CineMol.Tests.Drawing.fs  CineMol.Tests.Encoding.fs  CineMol.Tests.Example.fs  CineMol.Tests.Helpers.fs  CineMol.Tests.Parsing.fs  CineMol.Tests.Projection.fs  CineMol.Tests.Style.fs  CineMol.Tests.Types.fs  CineMol.Tests.fsproj
tests/Client/: Client.Tests.fs  index.html
tests/Server/: Server.Tests.fs  Server.Tests.fsproj
tests/Shared/: Shared.Tests.fs
tests/fixtures/: test_input_001.sdf  test_input_002.sdf  test_input_003.sdf  test_input_004.sdf
