##########################
# Setup.py Configuration #
##########################
[metadata]
name = cinemol
version = 0.0.1-dev
description = CineMol is a tool for drawing small molecule configurations directly to SVG.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/moltools/CineMol
download_url = https://github.com/moltools/CineMol/releases
project_urls =
    Tracker = https://github.com/moltools/CineMol/issues
    Source = https://github.com/moltools/CineMol
    Documentation = https://cinemol.readthedocs.io

# Author information
author = David Meijer
author_email = david.meijer@wur.nl
maintainer = David Meijer
maintainer_email = david.meijer@wur.nl

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python 
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
keywords =
    snekpack
    cookiecutter
    scalable vector graphics
    three-dimensional structure
    molecular drawing
    visualization


[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx_automodapi
    autodoc_pydantic
    # To include LaTeX comments easily in your docs
    texext


[options.entry_points]
console_scripts =
    cinemol = cinemol.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = cinemol
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/cinemol
    .tox/*/lib/python*/site-packages/cinemol

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#######################
# MyPy Configuration  #
#######################
[mypy]
plugins = pydantic.mypy

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    # pickle
    S301
    # pickle
    S403
    S404
    S603
    # Line break before binary operator (conflicts with black)
    W503
    # Multiple statements on one line (conflicts with black)
    E704
    # whitespace before ':'  (conflicts with black)
    E203
    # Requests call without timeout
    S113
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    cinemol
    tests
